--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,38 @@
  *= require_tree .
  *= require_self
  */
+ body {
+    margin: 0;
+  }
+  
+  .content {
+    margin: 10px auto;
+    width: 70%;
+  }
+  
+  .clearfix {
+    overflow: hidden;
+  }
+
+  header {
+    background: grey;
+    padding: 10px;
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+    }
+    a {
+      text-decoration: none;
+      font-weight: bold;
+      color: white;
+    }
+  }
+  
+  .left-nav {
+    float: left;
+  }
+  
+  .right-nav {
+    float: right;
+  }
