--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1>Welcome <%= @user.username%>'s homepage! </h1>
+<h1>Welcome to Glossy - <%= @user.username.capitalize%> </h1>
 
-<h3>Here are All of your Glosses <%=@user.username%>:</h3>
+<h3> All of Your Glosses <%=@user.username.capitalize%>:</h3>
