--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,7 @@
     <ul>
       <li><%= link_to "Login", login_path %> </li>
       <li><%= link_to "Sign Up", signup_path %></li>
+      <li><%= link_to  "Log Out", logout_path, method: :delete %></li>
     </ul>
   </div>
 
