lip_gloss index and show

--- a/app/views/lip_glosses/_form.html.erb
+++ b/app/views/lip_glosses/_form.html.erb
@@ -10,7 +10,7 @@
 
     <div>
     <%= f.label :price %>
-    <%= number_field(:product, :price, in: 1.0..20.0, step: 0.5) %>
+    <%= f.text_field :price %>
     </div>
 
     <p>Please Select the Gloss Sponsor:</p>
