added links to nav bar

--- a/app/views/lip_glosses/show.html.erb
+++ b/app/views/lip_glosses/show.html.erb
@@ -7,6 +7,12 @@
 
 
 
+<%= link_to "Edit #{@lip_gloss.name}", edit_lip_gloss_path(@lip_gloss) %>
+<%= link_to "Delete #{@lip_gloss.name}", edit_lip_gloss_path(@lip_gloss) %>
+<br></br>
+
+
+
 
 
 
