--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,15 +1,20 @@
 <header class='clearfix'>
   <div class="left-nav">
     <ul>
-      <li><%= link_to "Login", login_path %> </li>
-      <li><%= link_to "Sign Up", signup_path %></li>
-      <li><%= link_to  "Log Out", logout_path, method: :delete %></li>
+      <%= link_to "Login", login_path %> \
+      <%= link_to "Sign Up", signup_path %> \
+      <%= link_to  "Log Out", logout_path, method: :delete %>  \
     </ul>
   </div>
 
   <div class="right-nav">
     <ul>
-      <li></li>
+    <%= link_to "Log Out", logout_path, method: :delete %> |
+    <%= link_to "New Gloss", new_lip_gloss_path %> |
+    <%= link_to "My Lip GLosses", lip_gloss_path %> |
+    <%= link_to "Add a Review", new_review_path %> |
+    <%= link_to "All Reviews", reviews_path %> |
+    <%= link_to "All Sponsors", sponsors_path %> |
     </ul>
   </div>
 </header>
