--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,16 @@
     margin: 0;
   }
   
+  h1 {
+    text-align: center;
+    font-size: 60px;
+    font-family: 'Alex Brush', cursive; 
+    color: rgb(255, 151, 151);
+  }
   .content {
     margin: 10px auto;
     width: 70%;
+   
   }
   
   .clearfix {
@@ -47,4 +54,18 @@
   
   .right-nav {
     float: right;
-  }
+  } 
+
+
+  form {
+    margin-left:auto;
+    margin-right:auto;
+    width:200px;
+ }
+
+ 
+ .form {
+  margin-left:auto;
+  margin-right:auto;
+  width:200px;
+}
