--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
     <ul>
     <%= link_to "Log Out", logout_path, method: :delete %> |
     <%= link_to "New Gloss", new_lip_gloss_path %> |
-    <%= link_to "My Lip GLosses", lip_gloss_path %> |
+    <%= link_to "My Lip GLosses", lip_glosses_path %> |
     <%= link_to "Add a Review", new_review_path %> |
     <%= link_to "All Reviews", reviews_path %> |
     <%= link_to "All Sponsors", sponsors_path %> |
