--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,7 +1,8 @@
-<h1>All  Sponsors</h1>
-
+<h1> SPONSORS </h1>
+<div class="form">
 <ol>
   <% @sponsors.each do |s| %>
     <li><%= s.name%></li>
   <% end %>
 </ol>
+</div>
