--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-
+<div class="form">
 <%= form_for(@user) do |f|%>
   <%= f.label :username %>
   <%= f.text_field :username %>
@@ -9,3 +9,5 @@
 
   <%= f.submit "Sign Up" %>
 <% end %>
+
+</div>
