--- a/app/views/lip_glosses/index.html.erb
+++ b/app/views/lip_glosses/index.html.erb
@@ -1,14 +1,22 @@
 
-<% if @lip_gloss.blank? %>
-<p>There are not any Lip Gloss currently in the system.</p>
-<% else %>
-<p><h1> All Lip Gloss </h1></p>
 
-<ul id = "lip_gloss">
-   <% @lip_gloss.each do |c| %>
-   <li><%= link_to c.name, {:action => 'show', :id => c.id} -%></li>
-   <% end %>
-</ul>
+<h1> All Lip Gloss </h1>
 
-<% end %>
-<p><%= link_to "Add a New Gloss", {:action => 'new' }%></p>
+
+<div class="form">  
+   
+   <ul>
+      <% @lip_gloss.each do |c| %>
+      <li><%= link_to c.name, {:action => 'show', :id => c.id} -%> </li>
+      <% end %>
+      
+      <center> <p> You so Glossy!</p> </center>
+      
+      <center><bold> \ <%= link_to "Add a New Gloss", {:action => 'new' }%> \ </center>   </bold>
+      <br>
+      
+ 
+   </ul>
+
+
+</div>
