gem gem 'humanize_boolean'

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,25 +1,31 @@
-<div class="form">
-
-You are Reviewing : <%@review.lip_gloss.name%>
-<hr>
-Sponsored by : <%= @review.lip_gloss.sponsor.name %>
-<hr>
 <%= form_for(@review) do |f|%>
-
-  <p><i> Is this gloss worth the purchase? <br> <br> Select if 'yes' </p></i>
-  <%= f.check_box :purchase, :checked_value => "yes", :unchecked_value => "no" %>
-   
-
-   <p><i> What are your thoughts about this gloss?</p></i>
-
- 
-  <%= f.text_area :comment, size: "30x10"%>
-
-
- <%= f.hidden_field :lip_gloss_id %>
-   <br>
-   <br>
-  <%= f.submit "Add New Review" %>
-<% end %>
-
-</div>
+    <% if params[:lip_gloss_id] %>
+      <%= f.hidden_field :lip_gloss_id %>
+    <% else %>
+    <br>
+      <div>
+        <%= f.label :lip_gloss_id, "Select The Gloss" %>
+        <hr>
+        <%= f.collection_select :lip_gloss_id, LipGloss.all, :id, :name, include_blank: true %>
+      </div>
+    <% end %>
+    <div>
+    <br>
+      <%= f.label :purchase %>
+      <hr>
+      <%= f.select :purchase, [["Yes", true], ["No", false]], :include_blank => true %>
+    </div>
+    <br>
+    <div>
+      <%= f.label :comment %>
+      <hr>
+      <%= f.text_field :comment, size: "23x432" %>
+    </div>
+    <br>
+    <br>
+  
+  
+  
+    <%= f.submit %>
+  
+  <% end %>
