--- a/app/views/lip_glosses/index.html.erb
+++ b/app/views/lip_glosses/index.html.erb
@@ -7,7 +7,9 @@
    
    <ul>
       <% @lip_gloss.each do |c| %>
-      <li > * <%= link_to c.name, {:action => 'show', :id => c.id} %> * <br> </li>
+      <li > * <%= link_to c.name, {:action => 'show', :id => c.id} %> * <p>$<%= c.price %></p> <br> 
+      <%= link_to "Write a review", new_lip_gloss_review_path(c.id)%></li>
+      
       <% end %>
       
       
@@ -21,4 +23,4 @@
 
 </div>
 
-<h1> <center> <p> You're so Glossy! Keep Shining! </p> </center>  </h1>
+<h1> <center> <p> You're so Gloss
