--- a/app/views/lip_glosses/_form.html.erb
+++ b/app/views/lip_glosses/_form.html.erb
@@ -1,6 +1,8 @@
 
 <%= form_for(@lip_gloss) do |f|%>
 
+    <%= form_for(@lip_gloss) do |f| %>
+    
     <div>
     <%= f.label :name %>
     <%= f.text_field :name %>
@@ -26,7 +28,7 @@
     <%= f.fields_for :sponsor do |s| %>
         <%= s.label :name %>
         <%= s.text_field :name %>
-    <% end %>
+    
 
     </div>
     
