--- a/app/views/lip_glosses/new.html.erb
+++ b/app/views/lip_glosses/new.html.erb
@@ -2,4 +2,36 @@
 
 
 
-<%= render 'form' %>
+<%= form_for(@lip_gloss) do |f|%>
+    
+    <div>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    </div>
+    
+    <br>
+
+    <div>
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+    </div>
+
+    <p>Please Select the Gloss Sponsor:</p>
+    
+    <div>
+    <%= f.collection_select(:sponsor_id,Sponsor.all, :id, :name) %>
+    </div>
+
+
+    <p>New Gloss Sponsor? </p>
+     
+    <div>
+    <%= f.fields_for :sponsor do |s| %>
+        <%= s.label :name %>
+        <%= s.text_field :name %>
+    
+
+    </div>
+    <%end %>
+    <%= f.submit "Create Lip Gloss" %>
+  <% end %>
