--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,10 +1,10 @@
 
-<% if review.errors.any? %>
+<% if message.errors.any? %>
 <div id="error_explanation">
-  <h2><%= pluralize(review.errors.count, "error") %> prohibited this from being saved:</h2>
+  <h2><%= pluralize(message.errors.count, "error") %> prohibited this from being saved:</h2>
 
   <ul>
-  <% review.errors.full_messages.each do |msg| %>
+  <% message.errors.full_messages.each do |msg| %>
     <li><%= msg %></li>
   <% end %>
   </ul>
