--- a/app/views/lip_glosses/new.html.erb
+++ b/app/views/lip_glosses/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Lip Gloss</h1>
 
-
+<%= render 'layouts/errors', locals: {message: @lip_gloss} %>
 
 <%= form_for(@lip_gloss) do |f|%>
     
