--- a/app/views/lip_glosses/new.html.erb
+++ b/app/views/lip_glosses/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Lip Gloss</h1>
 
-<%= render 'layouts/errors', locals: {message: @lip_gloss} %>
+<%= render partial: 'layouts/errors', locals: {message: @lip_gloss} %>
 
 <%= form_for(@lip_gloss) do |f|%>
     
@@ -19,7 +19,7 @@
     <p>Please Select the Gloss Sponsor:</p>
     
     <div>
-    <%= f.collection_select(:sponsor_id,Sponsor.all, :id, :name) %>
+    <%= f.collection_select :sponsor_id, Sponsor.all, :id, :name, include_blank: 'Select One'%>
     </div>
 
 
