--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>SIGN UP</h1>
 
-<%= render 'layouts/errors', locals: {message: @user} %>
+<%= render partials: 'layouts/errors', locals: {message: @user} %>
 
 
 
