--- a/app/views/lip_glosses/_form.html.erb
+++ b/app/views/lip_glosses/_form.html.erb
@@ -1,7 +1,7 @@
 
-<%= form_for(@lip_gloss) do |f|%>
 
-    <%= form_for(@lip_gloss) do |f| %>
+
+<%= form_for(@lip_gloss) do |f|%>
     
     <div>
     <%= f.label :name %>
@@ -28,7 +28,7 @@
     <%= f.fields_for :sponsor do |s| %>
         <%= s.label :name %>
         <%= s.text_field :name %>
-    
+    <% end %>
 
     </div>
     
