--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,7 @@
+
+  <%= render partial: 'layouts/errors', locals: {message: @review} %>
+
+
 <% if params[:lip_gloss_id] %>
 
 <h1>Add A Review for <%= @review.lip_gloss.name %> - <%= @review.lip_gloss.type.name %> </h1>
