--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,7 +4,7 @@
 
 <% if params[:lip_gloss_id] %>
 
-<h1>Add A Review for <%= @review.lip_gloss.name %> - <%= @review.lip_gloss.type.name %> </h1>
+<h1>Add A Review for <%= @review.lip_gloss.name %> - <%= @review.lip_gloss.sponsor.name %> </h1>
 
 <%else%>
 
