--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,46 +1,7 @@
-
+ <div>
   <%= render partial: 'layouts/errors', locals: {message: @review} %>
 
-
-<% if params[:lip_gloss_id] %>
-
-<h1>Add A Review for <%= @review.lip_gloss.name %> - <%= @review.lip_gloss.sponsor.name %> </h1>
-
-<%else%>
-
-<h1>Add Review </h1>
-<%end%>
-
-<%= form_for(@review) do |f|%>
-    <% if params[:lip_gloss_id] %>
-    <%= f.hidden_field :lip_gloss_id %>
-  
-    <% else %>
-
-      <div>
-        <%= f.label :lip_gloss_id, "Select The Gloss" %>
-        <%= f.collection_select :lip_gloss_id, LipGloss.all, :id, :name_of_sponsor,  include_blank: true %>
-      </div>
-
-   <% end %>
- 
-    <br>
-    <div>
-      <%= f.label :purchase %>
-      <hr>
-      <%= f.select :purchase, [["Yes", true], ["No", false]], :include_blank => true %>
-    </div>
-    <br>
-    <div>
-      <%= f.label :comment %>
-      <hr>
-      <%= f.text_area :comment, size: "23x8" %>
-    </div>
-    <br>
-
-
-    <%= f.submit %>
-
-  <% end %>
-
+  <%= render 'form' %>
+  <%= link_to  "Cancel", workouts_path %>
+  </div>
 
