--- a/app/views/lip_glosses/new.html.erb
+++ b/app/views/lip_glosses/new.html.erb
@@ -2,36 +2,6 @@
 
 <%= render partial: 'layouts/errors', locals: {message: @lip_gloss} %>
 
-<%= form_for(@lip_gloss) do |f|%>
-    
-    <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    </div>
-    
-    <br>
+<%= render 'form' %>
 
-    <div>
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-    </div>
-
-    <p>Please Select the Gloss Sponsor:</p>
-    
-    <div>
-    <%= f.collection_select :sponsor_id, Sponsor.all, :id, :name, include_blank: 'Select One'%>
-    </div>
-
-
-    <p>New Gloss Sponsor? </p>
-     
-    <div>
-    <%= f.fields_for :sponsor do |s| %>
-        <%= s.label :name %>
-        <%= s.text_field :name %>
-    
-
-    </div>
-    <%end %>
-    <%= f.submit "Create Lip Gloss" %>
-  <% end %>
+<%= link_to  "Cancel", user_path(session[:user_id]) %>
