--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,6 +1,6 @@
 
 <% if @lip_gloss %>
-<h1>Reviews for <%= @lip_gloss.flavor%> - <%= @lip_gloss.brand_name%></h1>
+<h1>Reviews for <%= @lip_gloss.name%> - <%= @lip_gloss.name_of_sponsor%></h1>
 <% else %>
 <h1>All the Reviews </h1>
 <% end %>
