--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,6 @@
   <%= render partial: 'layouts/errors', locals: {message: @review} %>
 
   <%= render 'form' %>
-  <%= link_to  "Cancel", workouts_path %>
+  <%= link_to  "Cancel", lip_glosses_path %>
   </div>
 
