--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,20 +1,19 @@
 <header class='clearfix'>
   <div class="left-nav">
-    <ul>
-      <%= link_to "Login", login_path %> \
-      <%= link_to "Sign Up", signup_path %> \
-      <%= link_to  "Log Out", logout_path, method: :delete %>  \
-    </ul>
+  <% if session[:user_id] %>
+      <%= link_to 'Logout', logout_path, :method => :delete %>
+
   </div>
 
   <div class="right-nav">
     <ul>
-    <%= link_to "Log Out", logout_path, method: :delete %> |
     <%= link_to "New Gloss", new_lip_gloss_path %> |
     <%= link_to "My Lip GLosses", lip_glosses_path %> |
     <%= link_to "Add a Review", new_review_path %> |
     <%= link_to "All Reviews", reviews_path %> |
     <%= link_to "All Sponsors", sponsors_path %> |
     </ul>
-  </div>
+  </div> 
+  
+  <% end %>
 </header>
