--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
-<h1>Welcome to Glossy - <%= @user.username.capitalize%> </h1>
+<h1>Welcome to Glossy </h1>
 
-<h3> All of Your Glosses <%=@user.username.capitalize%>:</h3>
+<h2> <%= @user.username.capitalize%> </h2>
+
