--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,1 +1,13 @@
 @import "bootstrap/scss/bootstrap";
+
+
+.jumbotron {
+    height:100%;
+    width:100%;
+  }
+  .container {
+    width:1025px;
+  }
+  .jumbotron .container {
+    max-width: 100%;
+  } 
