--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,26 @@
 @import "bootstrap/scss/bootstrap";
 
 
-.jumbotron {
+.vertical-center {
     height:100%;
     width:100%;
+  
+    text-align: center;  /* align the inline(-block) elements horizontally */
+    font: 0/0 a;         /* remove the gap between inline(-block) elements */
   }
-  .container {
-    width:1025px;
+  
+  .vertical-center:before {    /* create a full-height inline block pseudo=element */
+    content: " ";
+    display: inline-block;
+    vertical-align: middle;    /* vertical alignment of the inline element */
+    height: 100%;
   }
-  .jumbotron .container {
+  
+  .vertical-center > .container {
     max-width: 100%;
-  } 
+  
+    display: inline-block;
+    vertical-align: middle;  /* vertical alignment of the inline element */
+                             /* reset the font property */
+    font: 16px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
