--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,7 +6,7 @@
     background-repeat: repeat;
     background-attachment: fixed;
     height: 305px; 
-    background-position: bottom;
+    background-position: center;
     background-size:  auto;
   }
 
