--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,17 +13,15 @@
 
 h1 { 
     font-family: 'Homemade Apple', cursive;
-    color: #DB7093;
+    color:#DB7093;
     font-size: xx-large;
 }
 
 a:link, a:visited {
-    color: #DB7093;
-    color: white;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    background-color: 1px solid #DB7093;
+    font-family: 'Homemade Apple', cursive;
+ 
+
   }
 
 
