--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,20 @@
 @import "bootstrap/scss/bootstrap";
 
+.background {
+    position: top;
+    width: 100%;
+    height: 200px;
+    background-image: url('glossy_logo.png');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+}
 
 
 .homepage  {
     background-image: url('glossy.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    height: 4px; 
+    height: 415px; 
     background-position: center;
     background-size:  auto;
   }
@@ -20,9 +28,10 @@ h1 {
 a:link, a:visited {
     font-family: 'Homemade Apple', cursive;
     color: #DB7093;
-    padding: 12px;50
-    width: 4px;
+    padding: 12px;
+    width: 10px;
     text-align: center;
+    font-size: xx-large;
   }
 
 
@@ -38,7 +47,7 @@ a:link, a:visited {
     content: " ";
     display: inline-block;
     vertical-align: middle;    /* vertical alignment of the inline element */
-    height: 100%;
+    height: 50%;
   }
   
   .vertical-center > .container {
