--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
   </head>
 
   <body>
-
+  <div class="background"></div>
   <% if logged_in? %>
 
   <%= render "layouts/navbar" %>
-
+   </div>
   <% end %>
     <%= yield %>
   
