--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,16 @@
-<h1>SIGN UP</h1>
 
 <%= render partial: 'layouts/errors', locals: {message: @user} %>
 
 
 
+<div class="jumbotron vertical-center">
+  <div class="container">
+    <h1 class="display-4">- Sign Up - </h1>
+    <p class="lead">
+    <br>
+    <br>
+    
 <%= render 'form' %>
+
+</div>
+</div>
