added css to user page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,16 @@
-<h1>Welcome to Glossy </h1>
+<%= render partial: 'layouts/errors', locals: {message: @user} %>
 
-<h2> <%= @user.username.capitalize%> </h2>
+
+
+<div class="jumbotron vertical-center">
+  <div class="container">
+    <h1 class="display-4"> Welcome to Glossy!!</h1>
+    <h2> <%= @user.username.capitalize%> </h2>
+
+    <p class="lead">
+    <br>
+    <br>
+    
+</div>
+</div>
 
