--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,4 +1,6 @@
 
+<div class="jumbotron vertical-center">
+<div class="container">
 <% if @lip_gloss %>
 <h1>Reviews for <%= @lip_gloss.name%> - <%= @lip_gloss.name_of_sponsor%></h1>
 <% else %>
@@ -19,4 +21,6 @@
     </ul>
    
 
+ </div>
+ </div>
  </div>
