--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,11 +4,14 @@
 
 <div class="jumbotron vertical-center">
   <div class="container">
-    <h1 class="display-4"> Welcome to Glossy!!</h1>
-    <h2> <%= @user.username.capitalize%> </h2>
-
-    <p class="lead">
+    <h1 class="display-4"> Welcome to Glossy!!</h1><br>
     <br>
+    <h2> <%= @user.username.capitalize%> </h2>
+    <p class="lead"> <i>
+     We are so excited to have you apart of the family. Our goal here at glossy is to empower young women, one gloss at a time. 
+     Glossy will give you the knowdlegde og how to build a brand and what it takes to be a owner. 
+     It starts with a a simple lip gloss and prepares you for anything!
+    <br><br><h2> Thank you for partnering with  Glossy</h2>  </p>
     <br>
     
 </div>
