fixed delete link

--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,4 +1,4 @@
-
+<center>
 <% if message.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(message.errors.count, "error") %> prohibited this from being saved:</h2>
@@ -10,3 +10,4 @@
   </ul>
 </div>
 <% end %>
+</center>
