--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,7 @@
   <%= render partial: 'layouts/errors', locals: {message: @review} %>
 
   <%= render 'form' %>
-  <%= link_to  "Cancel", lip_glosses_path %>
+<hr>
+  <center> <%= link_to  "Cancel", lip_glosses_path %> </center>
   </div>
 
