--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,8 @@
  
+<div class="jumbotron vertical-center">
+<div class="container">
+  <h1 class="display-4">- Login - </h1>
+  <p class="lead">
 
 <h1><p> | The Results Are In  <%= @review.lip_gloss.name%> - </h1>| </p> </h1>
 
@@ -16,4 +20,5 @@
 
 
 <h1>Thanks For Your Review ! </h1>
-
+</div>
+</div>
