--- a/app/views/lip_glosses/edit.html.erb
+++ b/app/views/lip_glosses/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Edit Lip Gloss</h1>
 
-
-<div>
+<div class="jumbotron vertical-center">
+<div class="container">
+  <h1 class="display-4">- Edit Lip Gloss - </h1>
+  <p class="lead">
 <%= render 'form' %>
+</div>
+</div>
 </div>
