--- a/app/views/lip_glosses/show.html.erb
+++ b/app/views/lip_glosses/show.html.erb
@@ -1,22 +1,20 @@
-<h1><%= @lip_gloss.name %></h1>
 
-
-<div class="form"> 
-
-   <strong>Price: </strong> $<%= @lip_gloss.price %><br />
-
-<%= link_to "Edit #{@lip_gloss.name}", edit_lip_gloss_path(@lip_gloss) %>
+<div class="jumbotron vertical-center">
+<div class="container">
+  <h1 class="display-4"><h1>-<%= @lip_gloss.name %>-</h1>
+  <p class="lead">
 
 
 
+   <strong>The Price of the Gloss </strong> $<%= @lip_gloss.price %><br>
+<br>
 
 <% @reviews.all.each do |c| %>
      <h5>Comment - <%= c.comment %></h5>
    <h5> Created-at <%= c.created_at %></h5>
-   <hr>
    <% end %> 
-   <%= link_to  "View reviews", lip_gloss_reviews_path(@lip_gloss) %>
+   <%= link_to  "View review for this Gloss", lip_gloss_reviews_path(@lip_gloss) %>
 
 
-
+</div>
 </div>
