--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,8 +1,15 @@
-<h1> Sponsors </h1>
+<div class="jumbotron vertical-center">
+<div class="container">
+  <h1 class="display-4">- Sponsors- </h1>
+  <p class="lead">
+
+
 <div class="form">
 <ol>
   <% @sponsors.each do |s| %>
     <li><%= s.name%></li>
   <% end %>
 </ol>
+</div>
+</div>
 </div>
