--- a/app/views/lip_glosses/show.html.erb
+++ b/app/views/lip_glosses/show.html.erb
@@ -7,6 +7,8 @@
 
 
    <strong>The Price of the Gloss </strong> $<%= @lip_gloss.price %><br>
+   <h3>Belongs to the User - <%= @lip_gloss.user.username %></h3>
+
 <br>
 
 <% @reviews.all.each do |c| %>
