--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
     <p class="lead"> <i>
      We are so excited to have you apart of the family. Our goal here at glossy is to empower young women, one gloss at a time. 
      Glossy will give you the knowdlegde og how to build a brand and what it takes to be a owner. 
-     It starts with a a simple lip gloss and prepares you for anything!
+     It starts with a simple lip gloss and prepares you for anything!
     <br><br><h2> Thank you for partnering with  Glossy</h2>  </p>
     <br>
     
